working on fixing overflow

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
     padding: 0; 
     line-height: 0.75;
     box-sizing: border-box; 
-    overflow-x: hidden; 
 }
 
 body {
@@ -203,7 +202,6 @@ body {
     color: #fff; 
     font-family: 'Barlow Semi Condensed', sans-serif; 
     text-transform: uppercase;
-    overflow-y: hidden; 
 }
 
 .player, .computer {
@@ -243,7 +241,6 @@ body {
     display: flex; 
     justify-content: center;
     align-items: center; 
-    overflow:visible;
 }
 
 .result-container{
@@ -327,7 +324,6 @@ body {
     font-family: 'Barlow Semi Condensed', sans-serif;
     font-size: 50px; 
     transition: 0.2s; 
-    overflow: hidden; 
 }
 
 .close:hover{
@@ -394,10 +390,6 @@ body {
     .options {
         font-size: 10px; 
         width: 24vw;  
-    }
-
-    .options h1 {
-        overflow-y: hidden;
     }
 
     .game-container{
